[package]
name = "gitql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
time = "0.1"
mysql = "22.2.0"
mysql_common = { version = "0.28.2", features = ["chrono"] }
rayon = "1.5.3"
clap = { version = "4.0.22", features = ["derive"] }
